src/test/ui/compile-fail-migration/const-match-check.matchck.stderr
error[E0005]: refutable pattern in local binding: `_` not covered
  --> $DIR/const-match-check.rs:14:22
   |
LL | const X: i32 = { let 0 = 0; 0 };
   |                      ^ pattern `_` not covered

error[E0005]: refutable pattern in local binding: `_` not covered
  --> $DIR/const-match-check.rs:18:23
   |
LL | static Y: i32 = { let 0 = 0; 0 };
   |                       ^ pattern `_` not covered

error[E0005]: refutable pattern in local binding: `_` not covered
  --> $DIR/const-match-check.rs:23:26
   |
LL |     const X: i32 = { let 0 = 0; 0 };
   |                          ^ pattern `_` not covered

error[E0005]: refutable pattern in local binding: `_` not covered
  --> $DIR/const-match-check.rs:29:26
   |
LL |     const X: i32 = { let 0 = 0; 0 };
   |                          ^ pattern `_` not covered

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0005`.
